force-app/main/default/objects/Case_Record_Type_behavior__mdt/fields/Auto_Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Date_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, Cases with this Record Type will have their Auto Close Date Time field set in CaseTriggerHelper.</description>
    <label>Auto Close Date Time</label>
    <type>Checkbox</type>
</CustomField>