force-app/main/default/objects/Case_Record_Type_behavior__mdt/fields/Auto_In_Progress_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Auto_In_Progress_Date_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto In Progress Date Time</label>
    <type>Checkbox</type>
</CustomField>