force-app/main/default/objects/Case_Record_Type_behavior__mdt/fields/Status_Updates_to_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Status_Updates_to_Response_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, Cases with this record type will have their status changed to Response Received when an email message is sent to them.</description>
    <label>Status Updates to Response Received</label>
    <type>Checkbox</type>
</CustomField>